container-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: maintainance-pod
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: ['sh', '-c', 'while true; do echo Success! >> /output/output.txt; sleep 5; done']
    volumeMounts:
    - name: output-vol
      mountPath: /output
  volumes:
  - name: output-vol
    hostPath:
      path: /home/minh/code/learn-k8s/data
