multiple-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi
  namespace: baz
spec:
  containers:
  - name: nginx
    image: nginx
  - name: redis
    image: redis
---
apiVersion: v1
kind: Pod
metadata:
  name: logging-sidecar
  namespace: baz
spec: 
  containers:
  - name: busybox1
    image: busybox:latest
    command: ['sh', '-c', 'while true; do echo Logging data > /output/output.log; sleep 5; done']
    volumeMounts:
    - name: shared-vol
      mountPath: /output
  - name: sidecar
    image: busybox:latest
    command: ['sh', '-c', 'tail -f /input/output.log']
    volumeMounts:
    - name: shared-vol
      mountPath: /
  volumes:
  - name: shared-vol
    emptyDir: {}
